JSW Devsb/src/objects/Commercial_Closure__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Committee_Remarks__c</fullName>
        <label>Approval Committee Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_committe__c</fullName>
        <label>Approval committe</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approve__c</fullName>
        <label>Approve</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Commercial_Closures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Committee_Member__c</fullName>
        <label>Committee Member</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Settlement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Settlement</label>
        <referenceTo>Settlement__c</referenceTo>
        <relationshipLabel>Commercial Closures</relationshipLabel>
        <relationshipName>Commercial_Closures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>is_the_Supply_within_60_days_from_mfg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is the Supply within 60 days from mfg</label>
        <type>Checkbox</type>
    </fields>
    <label>Commercial Closure</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Commercial Closure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commercial Closures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>